--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 futures-util = "0.3.28"
 include_dir = "0.7.3"
 rapid-web = "0.3.8"
-diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
+diesel = { version = "2.0.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
+postgres = "0.19.5"
