--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ futures-util = "0.3.28"
 include_dir = "0.7.3"
 rapid-web = "0.3.8"
 diesel = { version = "2.0.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
-postgres = "0.19.5"
+sqlx = { version = "0.5.8", features = ["postgres", "runtime-actix-rustls"] }
+tokio-postgres = "0.7.8"
